+
   NOTE: The `html-chunked` documents are currently still not installed.

 - added support to `./configure --with-doc=man=dist-auto` to use distributed
   manual page files if present; only fall back to build them if we can. [#2473]

 - added a `make distcheck-light-man` recipe to require verification that the
   manual page files can be built using the prepared "tarball" archive. [#2473]

 - added a `common/Makefile.am` build product for a new internal library
   `libcommonstr.la` which allows a smaller selection of helper methods
   for tools like `nut-scanner` which do not need the full `libcommon.la`
   nor `libcommonclient.la`. [#2478, #2491]

 - added a `drivers/Makefile.am` build product for a new internal library
   `libserial-nutscan.la` to simplify `tools/nut-scanner/Makefile.am` recipes.
   [#2490]

 - build of `snmp-ups` and `netxml-ups` drivers now explicitly brings linker
   dependency on chosen SSL libraries. [#2479]

 - brought keyword dictionaries of `nutconf` and `augeas` NUT configuration
   file parsers up to date; restored automated checks for `augeas` lenses.
   [issue #657, issue #2294]
+
   NOTE: Some known issues remain with augeas lens definitions so currently
   they should be able to parse common simple use-cases but not certain types
   of more complex configurations (e.g. some line patterns that involve too
   many double-quote characters) which are valid for NUT proper. [#657]

 - NUT CI farm build recipes, documentation and some `m4`/`configure.ac`
   sources updated to handle a much larger build scope on MacOS. Also
   migrated the builders to Apple Silicon from x86 (deprecated by CircleCI).
   [#2502]


Release notes for NUT 2.8.2 - what's new since 2.8.1
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/10

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1:
   * dstate machinery: a segmentation fault (null pointer dereference) was